--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,7 @@ FetchContent_MakeAvailable(SFML)    # Makes sure SFML and its dependencies are a
 
 #---- File management & .exe creation ----#
 
-set(SOURCE_FILES src/main.cpp src/Game.cpp src/Game.h "src/ObjectClass.h" "src/Vector2.h" "src/Vector2.cpp" "src/ObjectClass.cpp" "src/SceneHandler2.h" "src/SceneHandler2.cpp" "src/Scene.h" "src/Scene.cpp")  # Sets variable SOURCE_FILES to hold names & locations of files that need to be compiled into the application
+set(SOURCE_FILES src/main.cpp src/Game.cpp src/Game.h "src/ObjectClass.h" "src/Vector2.h" "src/Vector2.cpp" "src/ObjectClass.cpp" "src/SceneHandler2.h" "src/SceneHandler2.cpp" "src/Scene.h" "src/Scene.cpp" "src/MainMenu.h" "src/MainMenu.cpp" "src/Button.h" "src/Button.cpp")  # Sets variable SOURCE_FILES to hold names & locations of files that need to be compiled into the application
 add_executable(PlatformerSFML ${SOURCE_FILES})  # Names the application and tells compiler which source files to use
 
 target_link_libraries(PlatformerSFML PRIVATE sfml-graphics sfml-window sfml-system sfml-network sfml-audio) # Links the SFML libraries we need to our application
